541-request-routing/5412-uri/istio-api/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews-uri
spec:
  hosts:
    - reviews
  http:
    - match:
        - uri:
            prefix: /reviews/v1/
      route:
        - destination:
            host: reviews
            subset: v1
    - match:
        - uri:
            prefix: /reviews/v2/
      route:
        - destination:
            host: reviews
            subset: v2
